<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_store"
        android:icon="@drawable/ic_cart"
        android:title="@string/store" />

    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_events"
        android:title="@string/events" />

    <item
        android:id="@+id/nav_be_my_eyes"
        android:icon="@drawable/eye"
        android:title="@string/be_my_eyes" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

    <!--    <item-->
    <!--        android:id="@+id/nav_logout"-->
    <!--        android:icon="@drawable/ic_logout"-->
    <!--        android:title="" />-->

</menu>