<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_store"
        android:icon="@drawable/ic_cart"
        android:title="@string/store" />

    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_events"
        android:title="@string/events" />

    <item
        android:id="@+id/nav_payments"
        android:icon="@drawable/ic_payment"
        android:title="@string/payments" />

    <item
        android:id="@+id/nav_donations"
        android:icon="@drawable/ic_donate"
        android:title="@string/donations" />

    <item
        android:id="@+id/nav_share_app"
        android:icon="@drawable/ic_nav_share"
        android:title="" />

<!--    <item-->
<!--        android:id="@+id/nav_logout"-->
<!--        android:icon="@drawable/ic_logout"-->
<!--        android:title="" />-->

</menu>