<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.auth.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:alpha=".8"
        android:background="@drawable/background_gradient"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:elevation="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/black" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_logo_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="35dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="5dp">


        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:elevation="2dp"
            android:maxHeight="120dp"
            android:src="@drawable/app_logo"
            android:transitionName="app_img" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:cardBackgroundColor="#F1F2F3"
        app:cardCornerRadius="35dp"
        app:cardElevation="0dp"
        app:contentPadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/login_logo_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:elevation="4dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:errorEnabled="true"
                app:boxStrokeWidth="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:elevation="4dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:elevation="4dp"
                android:paddingVertical="12dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                app:elevation="4dp"
                app:layout_constraintTop_toBottomOf="@id/password" />

            <TextView
                android:id="@+id/forgotten_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/forgotten_password"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login" />

            <View
                android:id="@+id/temp_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/shimmer"
                app:layout_constraintTop_toBottomOf="@id/forgotten_password" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:paddingVertical="10dp"
                android:text="@string/create_new_account"
                android:textAllCaps="false"
                app:backgroundTint="@color/colorSecondary"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/temp_line" />


            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="6dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/login"
                tools:visibility="visible" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>